--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,10 @@
 <div class="wrapper">
-  <%= render "side_bar" %>
-  <%= render "main_chat" %>
+
+  <div class="side_left">
+    <%= render "side_bar" %>
+  </div>
+
+  <div class="main_center">
+    <%= render "main_chat" %>
+  </div>
 </div>
