--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -38,10 +38,46 @@
 .side-header{
   height:100px;
   padding:0 20px;
+
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .side-main {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding:0 20px;
+  overflow: scroll;
+  
+  
+}
+
+.side-main::-webkit-scrollbar {
+  display:none;
+ }
+
+.user_name a{
+  color: #FAFAFA;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.new_chat a{
+  color:  deepskyblue;
+  font-size: 10px;
+  border:solid 1px lightblue;
+  padding:14px;
+  text-decoration: none;
+}
+.chat_room {
+  padding:20px 0 40px;
+}
+
+
+.chat_room_name a {
+  color: white;
+  text-decoration: none;
+  
+  
 }
