--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,5 +1,26 @@
 <div class="side-header">
+  
+  <div class="user_name">
+   <a href="">Tom</a>
+  </div>
+
+  <div class="new_chat">
+   <a href=""> チャットを作成する</a>
+  </div>
 </div>
 
 <div class="side-main">
+
+ <div class="chat_room"> 
+
+   <div class="chat_room_name">
+    <a href="">techroom1</a> 
+   </div>
+ </div>
+
+ <div class="chat_room">
+  <div class="chat_room_name"> 
+   <a href="">techroom2</a>
+  </div>
+ </div>
 </div>
