チャット画面のフロント実装

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,5 +1,64 @@
-<div class="main_header"></div>
+<div class="main_header">
+ <div class="main_header_left">
+  <div class="m_chat_name">
+   <h1>hogehuga</h1>
+  </div>
+ </div>
 
-<div class="main_main"></div>
+ <div class="main_header_right">
+  <div class="m_chat_end">
+   <a href="">チャットを終了する</a>
+  </div>
+ </div>
+</div>
 
-<div class="main_footer"></div>
+
+<div class="main_main">
+ <div class="message">
+  <div class="message_top">
+   <div class="message_name">
+    Tom
+   </div>
+
+   <div class="message_date">
+    2020/3/31(Wed) 12:43:30
+   </div>
+  </div>
+
+  <div class="message_bottom">
+   <div class="message_main">
+    おはよう
+   </div>
+  </div>
+ </div>
+ 
+  <div class="message">
+  <div class="message_top">
+   <div class="message_name">
+    Tom
+   </div>
+
+   <div class="message_date">
+    2020/3/31(Wed) 12:47:30
+   </div>
+  </div>
+
+  <div class="message_bottom">
+   <div class="message_main">
+    こんばんは
+   </div>
+  </div>
+ </div>
+</div>
+
+<div class="main_footer">
+ <div class="form-input">
+  <input class="form-message" placeholder="type a message"> 
+  <label class="form-image">
+      <span class="image-file">画像</span>
+      <input type="file" class="hidden">
+    </label> 
+ </div>
+ <input class="form-submit" type ="submit" value="送信">
+
+</div>
