--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,7 +1,7 @@
 <div class="side-header">
   
   <div class="user_name">
-   <a href="">Tom</a>
+   <%= link_to current_user.name, edit_user_path(current_user)%>
   </div>
 
   <div class="new_chat">
