--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -5,22 +5,20 @@
   </div>
 
   <div class="new_chat">
-   <a href=""> チャットを作成する</a>
+   <%= link_to "チャットを作成する",new_room_path%>
   </div>
 </div>
 
 <div class="side-main">
 
+ <% current_user.rooms.each do |room|%>
  <div class="chat_room"> 
 
    <div class="chat_room_name">
-    <a href="">techroom1</a> 
+    <a href=""><%= room.name %></a> 
    </div>
- </div>
-
- <div class="chat_room">
-  <div class="chat_room_name"> 
-   <a href="">techroom2</a>
   </div>
- </div>
+ <%end%>
+
+
 </div>
