画面遷移の実装

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -130,6 +130,7 @@
 .side-header{
   height:100px;
   padding:0 20px;
+  background-color: #253141;
 
   display:flex;
   justify-content: space-between;
