--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -15,7 +15,7 @@
  <div class="chat_room"> 
 
    <div class="chat_room_name">
-    <a href=""><%= room.name %></a> 
+    <%=link_to room.name, room_messages_path(room)%>
    </div>
   </div>
  <%end%>
