チャットルーム名の表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="main_header">
  <div class="main_header_left">
   <div class="m_chat_name">
-   <h1>hogehuga</h1>
+   <%= @room.name%>
   </div>
  </div>
 
