--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -7,7 +7,7 @@
 
  <div class="main_header_right">
   <div class="m_chat_end">
-   <a href="">チャットを終了する</a>
+   <%= link_to "チャットを終了する", room_path(@room), method: :delete %>
   </div>
  </div>
 </div>
