--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -18,8 +18,8 @@
  
 </div>
 
-<div class="main_footer">
- <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
+
+ <%= form_with model: [@room, @message], class: 'main_footer', local: true do |f| %>
   <div class="form-input">
     <%= f.text_field :content, class: "form-message", placeholder: 'type a message' %>
     <label class="form-image">
@@ -31,5 +31,3 @@
   <%= f.submit '送信', class:'form-submit' %>
   
 <% end %>
-
-</div>
